<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NovaTrack</string>

    <string name="sign_in_title">Sign In to Account</string>
    <string name="sign_up_title">Sign Up to Join</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_subtitle">Enter your email to receive a password reset link</string>

    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="full_name_hint">Enter your full name</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_hint">Enter your password again</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="logout">Logout</string>

    <string name="forgot_password">Forgot Password??</string>
    <string name="dont_have_account">Don\'t have account? Sign Up</string>
    <string name="already_have_account">Already have account? Sign In</string>

    <string name="toggle_password">Toggle Password Visibility</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome!</string>

    <string name="my_projects">My Projects</string>
    <string name="search_projects">Search projects…</string>
    <string name="add_project">Add Project</string>
    <string name="no_projects_yet">No projects yet</string>
    <string name="search">Search</string>

    <string name="project_title">Project Title</string>
    <string name="project_title_hint">Enter your project name</string>
    <string name="short_description">Short Description</string>
    <string name="short_description_hint">Enter short description about the project</string>
    <string name="subject">Subject</string>
    <string name="subject_hint">Enter subject name</string>
    <string name="due_date">Due Date</string>
    <string name="due_date_hint">No date selected yet</string>
    <string name="select_date">Select Date</string>

    <string name="what_novatrack_will_do">What NovaTrack will do:</string>
    <string name="summarize_project">Summarize Your Project</string>
    <string name="create_tasks">Create tasks and assign timeline</string>
    <string name="recommend_resources">Recommend resources</string>
    <string name="let_action_begin">Let the action begin</string>
</resources>